--- a/templates/index.html
+++ b/templates/index.html
@@ -90,7 +90,7 @@
         <h2 class="tm-color-primary tm-about-col tm-mb-40 tm-page-title">What is water quality index ?</h2>
         <div class="tm-row tm-about-row">
             <div class="tm-col tm-about-col tm-about-left">
-                <img src="{{url_for('static', filename='img/about.jpg')}}" alt="Prediction" class="tm-mb-30">
+                <img src="{{url_for('static', filename='img/predict.jpg')}}" alt="Prediction" class="tm-mb-30">
                 <p class="tm-mb-40">
                    "Save water, save life", Mari kita mengenal lebih dekat mengenai Water Quality Index.
                 </p>
