update home n footer

--- a/templates/footer.html
+++ b/templates/footer.html
@@ -1,4 +1,4 @@
 <footer class="tm-footer">
-    <span>Copyright &copy; <script>document.write(new Date().getFullYear())</script> Jernihin</span>
+    <span>Copyright &copy; <script>document.write(new Date().getFullYear())</script> <a href="https://jernihin.up.railway.app">Jernihin</a></span>
     <span>C22-078 SIB Dicoding 3 Capstone Team</span>
 </footer>
