--- a/templates/index.html
+++ b/templates/index.html
@@ -72,7 +72,7 @@
                             Jernihin adalah aplikasi berbasis <i>website</i> untuk memprediksi tingkat kualitas air yang dapat memberikan hasil prediksi air tersebut apakah aman untuk dikonsumsi atau tidak layak untuk dikonsumsi.
                         </p>
                         <div class="tm-text-center">
-                            <a href="#" class="tm-btn mfp-prevent-close tm-btn-next">
+                            <a href="#" class="tm-btn btn-blue mfp-prevent-close tm-btn-next">
                                 Coba Prediksi
                             </a>
                         </div>
@@ -126,7 +126,7 @@
                     Lorem Ipsum is simply dummy text of the printing and typesetting industry.
                     Lorem Ipsum is simply dummy text of the printing and typesetting industry.
                 </p>
-                <a href="/predict" class="tm-btn mfp-prevent-close">
+                <a href="/predict" class="tm-btn btn-blue mfp-prevent-close">
                     Prediksi Sekarang!
                 </a>
             </div>
@@ -219,7 +219,7 @@
                         Kami merupakan Capstone Team C22-078 SIB Dicoding Cycle 3 yang berfokus pada Machine Learning dan Front-End Web Developer.
                     </p>
                 </div>
-                <a href="#" class="tm-btn mfp-prevent-close tm-btn-next">
+                <a href="#" class="tm-btn btn-blue mfp-prevent-close tm-btn-next">
                     Contact Us
                 </a>
             </div>
@@ -245,7 +245,8 @@
                         <textarea rows="8" name="message" class="form-control rounded-0" placeholder="Message" required></textarea>
                     </div>
                     <div class="form-group tm-text-right">
-                        <button type="submit" class="tm-btn">Send it now</button>
+                        <button type="reset" class="tm-btn btn-red">Reset</button>
+                        <button type="submit" class="tm-btn btn-blue tm-ml-10">Send</button>
                     </div>
                 </form>
             </div>
