update predict btn

--- a/templates/predict.html
+++ b/templates/predict.html
@@ -65,7 +65,8 @@
             <input type="text" name="turbidity" class="form-control" placeholder="Turbidity" required>
         </div>
         <div class="form-group">
-            <button type="submit" class="tm-btn">Predict</button>
+            <button type="reset" class="tm-btn btn-red">Reset</button>
+            <button type="submit" class="tm-btn btn-blue tm-ml-10">Send</button>
         </div>
     </form>
 </div>
