--- a/templates/predict.html
+++ b/templates/predict.html
@@ -34,35 +34,35 @@
     <form id="contact-form" action="/result" method="POST">
         <div class="form-group">
             <label for="fecal" class="form-label">Fecal</label>
-            <input type="text" name="fecal" class="form-control" placeholder="Fecal" required>
+            <input type="nunmber" name="fecal" class="form-control" placeholder="Fecal" onkeypress="return isNumber(event)" required>
         </div>
         <div class="form-group">
             <label for="oxygen" class="form-label">Oxygen</label>
-            <input type="text" name="oxygen" class="form-control" placeholder="Oxygen" required>
+            <input type="nunmber" name="oxygen" class="form-control" placeholder="Oxygen" onkeypress="return isNumber(event)" required>
         </div>
         <div class="form-group">
             <label for="ph" class="form-label">pH</label>
-            <input type="text" name="ph" class="form-control" placeholder="pH" required>
+            <input type="nunmber" name="ph" class="form-control" placeholder="pH" onkeypress="return isNumber(event)" required>
         </div>
         <div class="form-group">
             <label for="tot_sediment" class="form-label">Total Sediment</label>
-            <input type="text" name="tot_sediment" class="form-control" placeholder="Total Sediment" required>
+            <input type="nunmber" name="tot_sediment" class="form-control" placeholder="Total Sediment" onkeypress="return isNumber(event)" required>
         </div>
         <div class="form-group">
             <label for="temp" class="form-label">Temperature</label>
-            <input type="text" name="temp" class="form-control" placeholder="Temperature" required>
+            <input type="nunmber" name="temp" class="form-control" placeholder="Temperature" onkeypress="return isNumber(event)" required>
         </div>
         <div class="form-group">
             <label for="nitrogen" class="form-label">Nitrogen</label>
-            <input type="text" name="nitrogen" class="form-control" placeholder="Nitrogen" required>
+            <input type="nunmber" name="nitrogen" class="form-control" placeholder="Nitrogen" onkeypress="return isNumber(event)" required>
         </div>
         <div class="form-group">
             <label for="phosphorus" class="form-label">Phosphorus</label>
-            <input type="text" name="phosphorus" class="form-control" placeholder="Phosphorus" required>
+            <input type="nunmber" name="phosphorus" class="form-control" placeholder="Phosphorus" onkeypress="return isNumber(event)" required>
         </div>
         <div class="form-group">
             <label for="turbidity" class="form-label">Turbidity</label>
-            <input type="text" name="turbidity" class="form-control" placeholder="Turbidity" required>
+            <input type="nunmber" name="turbidity" class="form-control" placeholder="Turbidity" onkeypress="return isNumber(event)" required>
         </div>
         <div class="form-group">
             <button type="reset" class="tm-btn btn-red">Reset</button>
