--- a/templates/scripts.html
+++ b/templates/scripts.html
@@ -3,3 +3,4 @@
 <script src="{{url_for('static', filename='js/isotope.pkgd.min.js')}}"></script>
 <script src="{{url_for('static', filename='js/jquery.magnific-popup.min.js')}}"></script>
 <script src="{{url_for('static', filename='js/templatemo-script.js')}}"></script>
+<script src="{{url_for('static', filename='js/jernihin.js')}}"></script>
