--- a/templates/index.html
+++ b/templates/index.html
@@ -87,38 +87,37 @@
         <a href="#" class="tm-close-popup">
             <i class="fas fa-times"></i>
         </a>
-        <h2 class="tm-color-primary tm-about-col tm-mb-40 tm-page-title">What is water quality index ?</h2>
+        <h2 class="tm-color-primary tm-about-col tm-mb-40 tm-page-title">Apa itu <i>Water Quality Index</i>?</h2>
         <div class="tm-row tm-about-row">
             <div class="tm-col tm-about-col tm-about-left">
                 <img src="{{url_for('static', filename='img/predict.jpg')}}" alt="Prediction" class="tm-mb-30">
                 <p class="tm-mb-40">
-                   "Save water, save life", Mari kita mengenal lebih dekat mengenai Water Quality Index.
+                   <b><i>Save Water, Save Life</i></b> 
                 </p>
                 <p class="tm-mb-40">
-                    Water Quality Index (WQI) merupakan perbandingan data kualitas air dengan “Pedoman Kualitas Air Minum Kanada” . 
-                    WQI mengukur nilai pH, Oxygen, Total Suspended Sediment, Nitrogen, Turbidity, Phosphorus dan Fecal  lalu menggabungkan ketiga pengukuran tersebut 
-                    menjadi satu skor. Perhitungan ini menghasilkan skor antara 0 sampai 100. Semakin tinggi skor maka kualitas air semakin baik. 
-                    Skor kemudian diberi peringkat ke dalam salah satu dari lima kategori.
+                    <i>Water quality index</i> (WQI) adalah salah satu alat untuk mengevaluasi tingkat pencemaran perairan yang cukup efektif dengan informasi yang komprehensif,mudah dipahami
+                    dan dapat digunakan olehmasyarakat. Metode analisa WQI dari beberapa parameter kualitas air dapat menjadi salah satu alat monitoring kualitas air. Nilai WQI
+                    berkisar dari 0 – 100 dengan kriteria nilai yang tinggi menunjukkan kualitas air yang lebih baik.
                 </p>
             </div>
             <div class="tm-col tm-about-col">
-                <p class="tm-mb-60">
-                    Pentingnya Kualitas Air dan Pemantauannya.
-                </p>
                 <p class="tm-mb-40">
-                               <ol>
-                        <li>Air Salah Satu Kebutuhan Dasar Umat Manusia. </br>
-                            Air adalah salah satu kebutuhan paling fundamental untuk mendukung hajat hidup manusia.
-                            Hal ini tentunya merefleksikan betapa krusialnya air dalam hidup manusia. Meski begitu, 
-                            umat manusia kini tengah menghadapi tantangan akibat adanya isu terkait sumber dan ketersediaan air yang semakin kesini semakin mendesak dan harus ditangani.
+                    <b>Pentingnya Pemantauan Kualitas Air</b>
+                </p>
+                <p>
+                    <ol class="tm-mb-40">
+                        <li><b>Air sebagai kebutuhan dasar umat manusia</b>
+                            <p>Air adalah salah satu kebutuhan paling fundamental untuk mendukung hajat hidup manusia.
+                                Hal ini tentunya merefleksikan betapa krusialnya air dalam hidup manusia. Meski begitu, 
+                                umat manusia kini tengah menghadapi tantangan akibat adanya isu terkait sumber dan ketersediaan air yang semakin kesini semakin mendesak dan harus ditangani.
+                            </p> 
                         </li>
-                        <li>Kualitas Air Mendefinisikan Air yang Aman untuk Dikonsumsi.</br> 
-                            Kualitas air dapat didefinisikan sebagai pengukuran kecocokan air untuk kegunaan tertentu, yang biasanya didasarkan pada karakteristik sebagai berikut  :
-                            <ul>
-                                <li>Fisik: temperatur, warna, cahaya, sedimentasi yang berada di air</li>
-                                <li>Kimiawi: kandungan oksigen, tingkat keasaman (pH), salinitas, kandungan nutrien, serta kontaminan lain</li>
-                                <li>Biologis: bakteri, alga, dan fitoplankton.</li>
-                            </ul>
+                        <li><b>Kualitas yang aman untuk dikonsumsi</b>
+                            <p>Kualitas air dapat didefinisikan sebagai pengukuran kecocokan air untuk kegunaan tertentu, yang biasanya didasarkan pada karakteristik sebagai berikut: 
+                                Fisik (Temperatur, Warna, Cahaya, Sedimentasi), 
+                                Kimiawi (Oksigen, pH, Salinitas, Nutrien), 
+                                Biologis (Bakteri, Alga, Fitoplankton).
+                            </p>
                         </li>
                     </ol>
                 </p>
