--- a/templates/index.html
+++ b/templates/index.html
@@ -114,8 +114,8 @@
                         </li>
                         <li><b>Kualitas yang aman untuk dikonsumsi</b>
                             <p>Kualitas air dapat didefinisikan sebagai pengukuran kecocokan air untuk kegunaan tertentu, yang biasanya didasarkan pada karakteristik sebagai berikut: 
-                                Fisik (Temperatur, Warna, Cahaya, Sedimentasi), 
-                                Kimiawi (Oksigen, pH, Salinitas, Nutrien), 
+                                Fisik (Temperatur, Warna, Cahaya, Sedimentasi);
+                                Kimiawi (Oksigen, pH, Salinitas, Nutrien); 
                                 Biologis (Bakteri, Alga, Fitoplankton).
                             </p>
                         </li>
