--- a/templates/footer.html
+++ b/templates/footer.html
@@ -1,4 +1,4 @@
-<footer class="tm-footer">
+<footer class="tm-footer p-3 mb-2 bg-info text-dark">
     <span>Copyright &copy; <script>document.write(getYear)</script> <a href="https://jernihin.up.railway.app">Jernihin</a></span>
     <span>C22-078 SIB Dicoding 3 Capstone Team</span>
 </footer>
