--- a/templates/styles.html
+++ b/templates/styles.html
@@ -1,3 +1,4 @@
+<link href="https://cdn.jsdelivr.net/npm/bootstrap@5.2.3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-rbsA2VBKQhggwzxH7pPCaAqO46MgnOM80zW1RWuH61DGLwZJEdK2Kadq2F9CUG65" crossorigin="anonymous">
 <link rel="stylesheet" href="https://fonts.googleapis.com/css2?family=Source+Sans+Pro&display=swap">
 <link rel="stylesheet" href="{{url_for('static', filename='fontawesome/css/all.min.css')}}">
 <link rel="stylesheet" href="{{url_for('static', filename='css/magnific-popup.css')}}">
