--- a/templates/predict.html
+++ b/templates/predict.html
@@ -30,6 +30,10 @@
     {% endif %}
     
     <br>
+    
+    <a href="https://jernihin.up.railway.app" class="tm-close-popup">
+        <i class="fas fa-times"></i>
+    </a>
 
     <form id="contact-form" action="/result" method="POST">
         <div class="row">
