--- a/templates/header.html
+++ b/templates/header.html
@@ -1,4 +1,13 @@
 <header class="tm-site-header">
-    <h1 class="tm-mt-0 tm-mb-15"><span class="tm-color-primary">JERNIH</span><span class="tm-color-gray-2">in</span></h1>
-    <em class="tm-tagline tm-color-light-gray">Water Quality Prediction</em>
+    <div class="navbar">
+        <div class="navbar1">
+            <img src="../static/img/Jernihin.png" alt="" style="width: 100px;">
+        </div>
+        <div class="navbar2">
+            <h1 class="tm-mt-0 tm-mb-0"><span class="tm-color-primary">JERNIH</span><span
+                    class="tm-color-gray-2">in</span>
+            </h1>
+            <em class="tm-tagline tm-color-light-gray">Water Quality Prediction</em>
+        </div>
+    </div>
 </header>
