--- a/templates/index.html
+++ b/templates/index.html
@@ -211,11 +211,10 @@
                             </a>
                         </li>
                     </ul>
-                    <p>
-                        Kami tim Jernihin, mahasiswa semester 5 yang berasal dari Teknik Informatika Universitas Lampung, Informatika Universitas AMIKOM Purwokerto, dan Ilmu Komputer Universitas Sumatera Utara.
-                    </p>
-                    <p>
-                        Kami merupakan Capstone Team C22-078 SIB Dicoding Cycle 3 yang berfokus pada Machine Learning dan Front-End Web Developer.
+                    <p style="text-align: justify;">
+                        Kami tim Jernihin, mahasiswa semester 5 yang berasal dari Teknik Informatika Universitas Lampung, 
+                        Informatika Universitas AMIKOM Purwokerto, dan Ilmu Komputer Universitas Sumatera Utara. 
+                        Kami merupakan Capstone Team C22-078 SIB Dicoding Cycle 3 yang berfokus pada pengembangan Machine Learning dan Front-End Web Developer.                   
                     </p>
                 </div>
                 <a href="#" class="tm-btn btn-blue mfp-prevent-close tm-btn-next">
