--- a/templates/index.html
+++ b/templates/index.html
@@ -122,8 +122,7 @@
                     </ol>
                 </p>
                 <p class="tm-mb-40">
-                    Lorem Ipsum is simply dummy text of the printing and typesetting industry.
-                    Lorem Ipsum is simply dummy text of the printing and typesetting industry.
+                    Mari pastikan kualitas air Anda sekarang!
                 </p>
                 <a href="/predict" class="tm-btn btn-blue mfp-prevent-close">
                     Prediksi Sekarang!
