--- a/templates/index.html
+++ b/templates/index.html
@@ -115,7 +115,7 @@
                         <li><b>Kualitas yang aman untuk dikonsumsi</b>
                             <p>Kualitas air dapat didefinisikan sebagai pengukuran kecocokan air untuk kegunaan tertentu, yang biasanya didasarkan pada karakteristik sebagai berikut: 
                                 Fisik (Temperatur, Warna, Cahaya, Sedimentasi);
-                                Kimiawi (Oksigen, pH, Salinitas, Nutrien); 
+                                Kimiawi (Oksigen, pH, Salinitas, Nutrien); dan
                                 Biologis (Bakteri, Alga, Fitoplankton).
                             </p>
                         </li>
@@ -211,9 +211,9 @@
                         </li>
                     </ul>
                     <p style="text-align: justify;">
-                        Kami tim Jernihin, mahasiswa semester 5 yang berasal dari Teknik Informatika Universitas Lampung, 
-                        Informatika Universitas AMIKOM Purwokerto, dan Ilmu Komputer Universitas Sumatera Utara. 
-                        Kami merupakan Capstone Team C22-078 SIB Dicoding Cycle 3 yang berfokus pada pengembangan Machine Learning dan Front-End Web Developer.                   
+                        Kami tim Jernihin, mahasiswa semester 5 yang berasal dari Prodi Teknik Informatika Universitas Lampung (Gilang), 
+                        Prodi Informatika Universitas AMIKOM Purwokerto (Ades), dan Prodi Ilmu Komputer Universitas Sumatera Utara (Andre & Chea). 
+                        Kami tergabung dalam Capstone Team C22-078 SIB Dicoding Cycle 3 yang berfokus pada pengembangan Machine Learning dan Front-End Web Developer.                   
                     </p>
                 </div>
                 <a href="#" class="tm-btn btn-blue mfp-prevent-close tm-btn-next">
