--- a/templates/index.html
+++ b/templates/index.html
@@ -1,6 +1,6 @@
 {% extends 'layout.html' %}
 
-{% block title %}Jernihin{% endblock %}
+{% block title %}JERNIHin{% endblock %}
 
 {% block content %}
 <!-- Video Banner -->
@@ -54,7 +54,7 @@
         <div class="tm-row tm-intro-row">
             <img src="{{url_for('static', filename='img/intro.jpg')}}" alt="Intro" class="tm-intro-img">
             <div class="tm-col tm-bg-white tm-intro-pad">
-                <h2 class="tm-color-primary tm-page-title">Apa itu Jernihin?</h2>
+                <h2 class="tm-color-primary tm-page-title">Apa itu JERNIHin?</h2>
                 <div class="tm-row tm-content-row">
                     <div class="tm-col-6 tm-intro-col-l">
                         <p>
@@ -64,7 +64,7 @@
                             Indeks kualitas air (WQI/<i>Water Quality Index</i>) merupakan alat ukur yang penting untuk menentukan kualitas air sebagai indeks yang mencerminkan pengaruh gabungan dari berbagai parameter kualitas air yang dipertimbangkan dan diambil untuk perhitungan indeks kualitas air.
                         </p>
                     </div>
-                    <div class="tm-col-6">
+                    <div class="tm-col-6 tm-intro-col-r">
                         <p>
                             Jadi, kami mengambil beberapa inspirasi untuk menggunakan <i>dataset</i> indeks kualitas air (WQI) untuk memahami jenis air minum yang aman dengan menerapkan <i>machine learning</i> untuk membedakan antara air minum dan air yang tidak layak untuk diminum.
                         </p>
@@ -211,9 +211,7 @@
                         </li>
                     </ul>
                     <p style="text-align: justify;">
-                        Kami tim Jernihin, mahasiswa semester 5 yang berasal dari Prodi Teknik Informatika Universitas Lampung (Gilang), 
-                        Prodi Informatika Universitas AMIKOM Purwokerto (Ades), dan Prodi Ilmu Komputer Universitas Sumatera Utara (Andre & Chea). 
-                        Kami tergabung dalam Capstone Team C22-078 SIB Dicoding Cycle 3 yang berfokus pada pengembangan Machine Learning dan Front-End Web Developer.                   
+                        Kami tim JERNIHin, mahasiswa semester 5 yang berasal dari Prodi Teknik Informatika Universitas Lampung (Gilang), Prodi Informatika Universitas AMIKOM Purwokerto (Ades), dan Prodi Ilmu Komputer Universitas Sumatera Utara (Andrew & Chea). Kami tergabung dalam Capstone Team C22-078 SIB Dicoding Cycle 3 yang berfokus pada Pengembangan Machine Learning dan Front-End Web Developer.
                     </p>
                 </div>
                 <a href="#" class="tm-btn btn-blue mfp-prevent-close tm-btn-next">
