--- a/templates/predict.html
+++ b/templates/predict.html
@@ -1,6 +1,6 @@
 {% extends 'layout.html' %}
 
-{% block title %}Jernihin | Prediksi Air{% endblock %}
+{% block title %}JERNIHINin | Prediksi Air{% endblock %}
 
 {% block content %}
 <div class="tm-container">
