--- a/templates/header.html
+++ b/templates/header.html
@@ -4,7 +4,7 @@
             <img src="{{url_for('static', filename='img/Jernihin.svg')}}" alt="">
         </div>
         <div class="navbar-right">
-            <h1 class="tm-mt-0 tm-mb-0">
+            <h1 class="tm-title tm-mt-0 tm-mb-0">
                 <span class="tm-color-primary">JERNIH</span><span class="tm-color-gray-2">in</span>
             </h1>
             <em class="tm-tagline tm-color-light-gray">Water Quality Prediction</em>
