--- a/templates/index.html
+++ b/templates/index.html
@@ -90,38 +90,27 @@
         <h2 class="tm-color-primary tm-about-col tm-mb-40 tm-page-title">Apa itu <i>Water Quality Index</i>?</h2>
         <div class="tm-row tm-about-row">
             <div class="tm-col tm-about-col tm-about-left">
-                <img src="{{url_for('static', filename='img/predict.jpg')}}" alt="Prediction" class="tm-mb-30">
-                <p class="tm-mb-40">
+                <img src="{{url_for('static', filename='img/predict.jpg')}}" alt="Prediction" class="tm-mb-15">
+                <p class="tm-mb-15 tm-color-primary">
                    <b><i>Save Water, Save Life</i></b> 
                 </p>
-                <p class="tm-mb-40">
-                    <i>Water quality index</i> (WQI) adalah salah satu alat untuk mengevaluasi tingkat pencemaran perairan yang cukup efektif dengan informasi yang komprehensif,mudah dipahami
-                    dan dapat digunakan olehmasyarakat. Metode analisa WQI dari beberapa parameter kualitas air dapat menjadi salah satu alat monitoring kualitas air. Nilai WQI
-                    berkisar dari 0 – 100 dengan kriteria nilai yang tinggi menunjukkan kualitas air yang lebih baik.
+                <p class="tm-mb-15">
+                    <i>Water quality index</i> (WQI) adalah salah satu alat untuk mengevaluasi tingkat pencemaran perairan yang cukup efektif dengan informasi yang komprehensif, mudah dipahami dan dapat digunakan olehmasyarakat. Metode analisa WQI dari beberapa parameter kualitas air dapat menjadi salah satu alat monitoring kualitas air. Nilai WQI berkisar dari 0 – 100 dengan kriteria nilai yang tinggi menunjukkan kualitas air yang lebih baik.
                 </p>
             </div>
             <div class="tm-col tm-about-col">
-                <p class="tm-mb-40">
+                <p class="tm-mb-15 tm-color-primary">
                     <b>Pentingnya Pemantauan Kualitas Air</b>
                 </p>
-                <p>
-                    <ol class="tm-mb-40">
-                        <li><b>Air sebagai kebutuhan dasar umat manusia</b>
-                            <p>Air adalah salah satu kebutuhan paling fundamental untuk mendukung hajat hidup manusia.
-                                Hal ini tentunya merefleksikan betapa krusialnya air dalam hidup manusia. Meski begitu, 
-                                umat manusia kini tengah menghadapi tantangan akibat adanya isu terkait sumber dan ketersediaan air yang semakin kesini semakin mendesak dan harus ditangani.
-                            </p> 
-                        </li>
-                        <li><b>Kualitas yang aman untuk dikonsumsi</b>
-                            <p>Kualitas air dapat didefinisikan sebagai pengukuran kecocokan air untuk kegunaan tertentu, yang biasanya didasarkan pada karakteristik sebagai berikut: 
-                                Fisik (Temperatur, Warna, Cahaya, Sedimentasi);
-                                Kimiawi (Oksigen, pH, Salinitas, Nutrien); dan
-                                Biologis (Bakteri, Alga, Fitoplankton).
-                            </p>
-                        </li>
-                    </ol>
-                </p>
-                <p class="tm-mb-40">
+                <ol class="tm-mb-15">
+                    <li><b>Sebagai Kebutuhan Dasar Umat Manusia</b>
+                        <p>Air adalah salah satu kebutuhan paling dasar untuk mendukung hidup manusia. Hal ini merefleksikan betapa pentingnya air dalam hidup manusia. Namun, saat ini terdapat tantangan sumber dan ketersediaan air bersih yang semakin mendesak dan harus ditangani.</p>
+                    </li>
+                    <li><b>Kualitas yang aman untuk dikonsumsi</b>
+                        <p>Kualitas air dapat didefinisikan sebagai pengukuran kecocokan air untuk kegunaan tertentu yang biasanya didasarkan pada karakteristik, yaitu: Fisik (Temperatur, Warna, Sedimentasi); Kimiawi (Oksigen, pH, Salinitas, Nutrien); dan Biologis (Bakteri, Alga, Fitoplankton).</p>
+                    </li>
+                </ol>
+                <p class="tm-mb-15">
                     Mari pastikan kualitas air Anda sekarang!
                 </p>
                 <a href="/predict" class="tm-btn btn-blue mfp-prevent-close">
@@ -210,7 +199,7 @@
                             </a>
                         </li>
                     </ul>
-                    <p style="text-align: justify;">
+                    <p>
                         Kami tim JERNIHin, mahasiswa semester 5 yang berasal dari Prodi Teknik Informatika Universitas Lampung (Gilang), Prodi Informatika Universitas AMIKOM Purwokerto (Ades), dan Prodi Ilmu Komputer Universitas Sumatera Utara (Andrew & Chea). Kami tergabung dalam Capstone Team C22-078 SIB Dicoding Cycle 3 yang berfokus pada Pengembangan Machine Learning dan Front-End Web Developer.
                     </p>
                 </div>
